Setup locally with docker compose and add observability (health,info,metrics).